[package]
name = "convert-encoding"
version = "2.1.0"
edition = "2024"
description = "SA-MP/open.mp plugin for TIS-620 ↔ UTF-8 encoding conversion"
license = "MIT"
authors = ["EasyCore", "uphokaew"]

[lib]
crate-type = ["cdylib"]

[dependencies]
samp-sdk = { git = "ssh://git@github.com/uphokaew/samp-plugin-rs.git", branch = "main" }

[features]
default = []
component = ["samp-sdk/component"]
